GSP-86 Changes to ReportControllerImplTest and ReportServiceImplTest, fixed mistake in test database, changes to AbstractTest